refactor(#2779): Add a utils class to deal with the stream prefix selector